--- a/pb_project.yaml
+++ b/pb_project.yaml
@@ -33,4 +33,4 @@ id_types:
       - type: exclude
         value: "test@company.com"
 python_requirements:
-  - profiles-pycorelib==0.14.0-alpha.1
+  - profiles-pycorelib==0.13.*
