--- a/pb_project.yaml
+++ b/pb_project.yaml
@@ -34,3 +34,4 @@ id_types:
         value: "test@company.com"
 python_requirements:
   - profiles-pycorelib==0.14.0.alpha.2
+  - profiles-rudderstack==0.14.0rc3
