--- a/pb_project.yaml
+++ b/pb_project.yaml
@@ -34,4 +34,4 @@ id_types:
         value: "test@company.com"
 python_requirements:
   # - profiles-rudderstack==0.14.0rc3
-  - profiles-pycorelib==0.14.0.alpha.2
+  - profiles-pycorelib==0.14.0.rc1
